--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
+    <script
+      src="https://kit.fontawesome.com/f2824f1181.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -11,62 +15,77 @@
       <div class="resume">
         <div class="container">
           <div class="resume__block">
-            <h1 class="contact-info__header">Bulka</h1>
-            <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+            <h1 class="contact-info__header">Vitalii Havryliv</h1>
+            <h3 class="contact-info__sub-header">Senior Fullstack Machine</h3>
 
             <div class="contact_info_container fh">
               <div class="contact-info__block">
                 <a href="" rel="author" class="contact-info__item">
                   <div class="contact-info__item-icon-wrapper">
-                    <svg
-                      class="contact-info__item-icon"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 384 512"
-                    >
-                      <path
-                        d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192
-        0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
-        13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
-        80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
-                      ></path>
-                    </svg>
+                    <i class="fa-solid fa-location-pin"></i>
                   </div>
-                  <span>Lviv, Ukraine</span>
+                  <span>Ternopil, Ukraine</span>
+                </a>
+                <a
+                  href="https://www.instagram.com/havryliv.vitalii/"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-brands fa-instagram"></i>
+                  </div>
+                  <span>havryliv.vitalii</span>
+                </a>
+                <a
+                  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-solid fa-circle-question"></i>
+                  </div>
+                  <span>What's here?</span>
                 </a>
               </div>
 
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.png"
+                  src="assets/myAvatar.png"
                   alt="Avatar"
                 />
               </div>
 
               <div class="contact-info__block">
                 <a
-                  href="https://ua.linkedin.com/company/binary-studio_241166"
+                  href="https://www.linkedin.com/in/vitalii-havryliv-101264255/"
                   rel="author"
                   class="contact-info__item"
                 >
                   <div class="contact-info__item-icon-wrapper">
-                    <svg
-                      class="contact-info__item-icon"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 448 512"
-                    >
-                      <path
-                        d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9
-        480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4
-        416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96
-        102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1
-        243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9
-        54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2
-        0 79.7 44.3 79.7 101.9V416z"
-                      ></path>
-                    </svg>
+                    <i class="fa-brands fa-linkedin"></i>
                   </div>
-                  <span>binary-studio</span>
+                  <span>Vitalii Havryliv</span>
+                </a>
+                <a
+                  href="mailto:vitaliihavriliv95@gmail.com"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-solid fa-envelope"></i>
+                  </div>
+                  <span>vitaliihavriliv95@gmail.com</span>
+                </a>
+                <a
+                  href="tel:+380931319202"
+                  rel="author"
+                  class="contact-info__item"
+                >
+                  <div class="contact-info__item-icon-wrapper">
+                    <i class="fa-solid fa-phone"></i>
+                  </div>
+                  <span>+380 93 131 92 02</span>
                 </a>
               </div>
             </div>
@@ -93,9 +112,18 @@
                 </svg>
               </div>
               <p class="intro_text">
-                Meow. I am a Binary Studio cat. Still got 7 lives. Work in IT,
-                Full Stack Evil, all I do is sleep and try to help out hoomans
-                with their projects whenever they need me.
+                My career started with a small role as a barista, where I
+                advanced to the position of Senior Barista/Manager in a small
+                coffee chain. This allowed me to develop communication and
+                problem-solving skills. Later, I transitioned to an
+                international marketing company, starting as a Verification
+                Service Specialist and progressing to a Quality Control
+                Specialist. My work community was filled with talented
+                individuals, and I also played a key role in training new team
+                members. Currently, I have been studying programming for over a
+                year, as I feel a strong passion for it. Typically, while
+                working and learning, I am always surrounded by my cat, Lisa –
+                my best companion and an endless source of inspiration.
               </p>
             </div>
           </div>
@@ -105,7 +133,8 @@
             <div class="skills">
               <h3 class="skills__header">Skills</h3>
               <p class="skills__text">
-                Sleep, eat, more sleep, meow, mrrr, purr.
+                Teamwork, Problem solving, Mentoring, Communication, Creativity,
+                Resilience
               </p>
             </div>
           </div>
@@ -117,11 +146,10 @@
                 <h3 class="experiences__header">Experience</h3>
                 <div class="experiences__company">
                   <div class="experiences__company-header">
-                    <span class="experiences__company-header-durability"
-                      >For whole my life</span
-                    >
+                    <span class="experiences__company-header-durability"></span>
+                    August 2021 - Present
                     <h3 class="experiences__company-header-name">
-                      BinaryStudio
+                      Company «INFUSEmedia»
                     </h3>
                   </div>
 
@@ -133,10 +161,19 @@
                       Hooman project
                     </h3>
                     <ul class="experiences__company-project-responsibilities">
-                      <li>Supported hoomans</li>
-                      <li>Slept all the time</li>
+                      <li>
+                        - Conducted quality control of verification specialists'
+                        work to ensure compliance with customer requirements.
+                      </li>
+                      <li>
+                        - Analyzed and cross-checked information using online
+                        resources.
+                      </li>
                       <li>Lied on the keyboard</li>
-                      <li>Watched my hoomans working</li>
+                      <li>
+                        - Mentored and provided ongoing training to team members
+                        throughout their probationary period
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -149,27 +186,27 @@
                     <div class="additional-info__education-university">
                       <span
                         class="additional-info__education-university-durability"
-                        >2021</span
+                      >
+                        September 2015 - December 2020</span
                       >
                       <h3
                         class="additional-info__education-university-speciality"
                       >
-                        Cat track
+                        Master`s Degree Area: Motor Vehicle Transport
                       </h3>
                       <p class="additional-info__education-university-name">
-                        Binary Studio Academy
+                        TERNOPIL TECHNICAL NATIONAL UNIVERSITY
                       </p>
                     </div>
                   </div>
 
                   <div class="additional-info__languages">
                     <h3 class="additional-info__languages-header">Languages</h3>
-                    <p class="additional-info__languages-item">Meow dialect</p>
                     <p class="additional-info__languages-item">
-                      Ukrainian (understand)
+                      Ukrainian (Native)
                     </p>
                     <p class="additional-info__languages-item">
-                      English (don't understand)
+                      English (London is the capital of Great Britain)
                     </p>
                   </div>
                 </div>
